# constraint-programming-hs

./: README.md  constraint-programming-hs.cabal
app/: Main.hs
src/: Lib.hs  Sudoku.hs
test/: LibSpec.hs
