name:                constraint-programming-hs
version:             0.1.0.0
synopsis:            
description:         Please see README.md
homepage:            https://github.com/ocramz/constraint-programming-hs
license:             BSD3
license-file:        LICENSE
author:              David Overton
maintainer:          Marco Zocca
copyright:           2013 David Overton
category:            Acme
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , mtl

executable constraint-programming-hs
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , constraint-programming-hs

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , constraint-programming-hs
                     , hspec
                     -- , QuickCheck

source-repository head
  type:     git
  location: https://github.com/githubuser/constraint-programming-hs
